--- a/next-ui/package.json
+++ b/next-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monad-farcaster-miniapp-template",
+  "name": "farcaster-hangman",
   "license": "MIT",
   "version": "0.1.0",
   "private": true,
